# power-controller-backend

cpp/: CMakeLists.txt  main.cpp  pwctl.h
go/: Dockerfile  main.go  readme.txt
go/cpp/: CMakeLists.txt  pwctrl-main.cpp  pwctrl-wrapper.cpp  pwctrl-wrapper.h  pwctrl.cpp  pwctrl.h
pure-go/: main-pw-ctrl-be.go
pure-go/pw-ctrl-be/: Dockerfile  docker-run.sh  go.mod  main-pw-ctrl-be.go  main.go
pure-go/test/: go.mod  main-test.go
